--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@types/node": "^16.18.28",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26",
+    "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.7",
+    "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
+    "v6": "^0.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
